--- a/Source/DD.Youtube.HyperNotesPlus.Client/wwwroot/index.html
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/wwwroot/index.html
@@ -22,6 +22,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/app.js"></script>
+
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
